# stay-cable-active-control

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  model_or_method.yml
.github/workflows/: python-ci.yml
docs/: MAINTAINER_GUIDE.md  model_equations.md  model_notes.md  reproducibility.md  roadmap.md
examples/matlab/: run_open_loop_demo.m
examples/python/: run_open_loop_demo.py
results/: README.md
src/matlab/: cable_rhs.m  cable_state_rhs.m
src/python/: cable_model.py
src/stay_cable_control/: __init__.py  benchmarks.py  controllers.py  models.py  simulation.py
tests/: test_model.py
